syntax = "proto3";

package com.isc.npsd.instantpayment.grpc;

message IPRequest {
  string message = 1;
  string type = 2;
  string senderBic = 3;
  string refId = 4;
}

message IPResponse {
  string message = 1;
}

service IPCoreService {
  rpc processMessage (IPRequest) returns (IPResponse);
}